# the_bois

./: .gitignore  README.md  config.yaml  pyproject.toml
memory/: episode_index.json  examples.json  mistakes.json  seed_examples.json
memory/episodes/: 2026-02-25_22-49-55.json  2026-02-26_11-35-13.json  2026-02-26_16-59-57.json  2026-02-28_10-25-11.json  2026-03-01_00-32-28.json  2026-03-01_02-08-27.json  2026-03-01_02-27-07.json  2026-03-02_22-44-47.json  2026-03-02_22-57-46.json  2026-03-02_23-05-29.json  2026-03-02_23-45-42.json  2026-03-04_17-32-13.json  2026-03-05_09-19-49.json  2026-03-05_14-57-53.json  2026-03-05_23-31-44.json  2026-03-09_23-39-49.json
src/the_bois/: __init__.py  cli.py  config.py  contracts.py  log.py  orchestrator.py  utils.py
src/the_bois/agents/: architect.py  base.py  coder.py  coordinator.py  researcher.py  reviewer.py
src/the_bois/memory/: __init__.py  embeddings.py  episodes.py  examples.py  injection.py  ledger.py  mistakes.py  scoring.py
src/the_bois/models/: mock.py  ollama.py
src/the_bois/tools/: context.py  deps.py  error_taxonomy.py  repair.py  search.py  static_check.py  tracing.py  validator.py  workspace.py
